<resources>
    <string name="app_name">Chat App</string>
    <string name="app_slogan">Chat Joyfully, Connect Instantly.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_back">Hello there, Welcome Back</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_to_continue">Sign up to chat with friends</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="go">Go</string>
    <string name="do_not_have_account">New User? Sign Up</string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="invite">Invite</string>
    <string name="logout">Logout</string>
    <string name="logout_title">Logout account ?</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="delete_friend_message">Are you sure you want to delete this friend?</string>
    <string name="leave_group_message">Are you sure you want to leave this group?</string>
    <string name="cancel">Cancel</string>
    <string name="create_group">Create Group</string>
    <string name="ok">OK</string>
    <string name="required_email">Email is required</string>
    <string name="required_username">Username is required</string>
    <string name="required_group_name">Group name is required</string>
    <string name="required_quantity_group_name">Group at least two people</string>
    <string name="required_password">Password is required</string>
    <string name="required_confirm_password">Confirm password is required</string>
    <string name="confirm_password_not_match">Confirm password is not match password</string>
    <string name="existed_email">Email already exists. Please use a different email.</string>
    <string name="required_image">Please select image</string>
    <string name="invalid_email">This is not a valid email</string>
    <string name="sign_in_successful">Successful! Welcome aboard!</string>
    <string name="sign_up_failure">Sign Up failure. Some error occurred.</string>
    <string name="sign_in_failure">"Sign in failure. Some error occured</string>
    <string name="create_group_failure">Create failure. Some error occured</string>
    <string name="create_group_success">Create group successful</string>

    <string name="incorrect_account">Email or Password is incorrect</string>
    <string name="save">Save</string>
    <string name="upload">Upload</string>
    <string name="update">Update</string>
    <string name="successful_update">Update successfully</string>
    <string name="successful_failure">Update failed. Try again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_list">User list</string>
    <string name="users">Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_info">view info</string>
    <string name="back">back</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="add_friend">Add friend</string>
    <string name="chat_with_friend">Chat with friend</string>
    <string name="friend_invite">Friend Invite</string>
    <string name="your_profile">Your Profile</string>
    <string name="add_more_friend">Add more friend</string>
    <string name="group">Group</string>
    <string name="create">Create</string>
    <string name="group_name">Group name</string>
    <string name="leave">Leave</string>

</resources>